WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158225
[Win] Potential null pointer crash when setting cursor.
https://bugs.webkit.org/show_bug.cgi?id=158225
Summary
[Win] Potential null pointer crash when setting cursor.
Per Arne Vollan
Reported
2016-05-31 05:23:39 PDT
Code inspection shows that the call cursor.platformCursor() can return null. void WebChromeClient::setCursor(const Cursor& cursor) { HCURSOR platformCursor = cursor.platformCursor()->nativeCursor(); ...
Attachments
Patch
(1.21 KB, patch)
2016-05-31 05:32 PDT
,
Per Arne Vollan
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-05-31 05:32:42 PDT
Created
attachment 280139
[details]
Patch
Alex Christensen
Comment 2
2016-05-31 09:52:35 PDT
Comment on
attachment 280139
[details]
Patch Sure
Per Arne Vollan
Comment 3
2016-06-01 02:13:50 PDT
(In reply to
comment #2
)
> Comment on
attachment 280139
[details]
> Patch > > Sure
Thanks for reviewing :)
Per Arne Vollan
Comment 4
2016-06-01 02:15:08 PDT
Committed
r201546
: <
https://trac.webkit.org/changeset/201546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug