[Win] Potential null pointer crash when setting cursor. https://bugs.webkit.org/show_bug.cgi?id=158225

Reviewed by Alex Christensen.

Check return value of Cursor::platformCursor().

* WebCoreSupport/WebChromeClient.cpp:
(WebChromeClient::setCursor):


Canonical link: https://commits.webkit.org/176342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201546 268f45cc-cd09-0410-ab3c-d52691b4dbfc